// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`D-02 success path: same stored data and result as before > fresh month process 1`] = `
{
  "db": {
    "lines": [
      {
        "account_no": "111",
        "bank_amount": 1085,
        "basic_earned": 577,
        "basic_full": 15000,
        "computed_json": {
          "bank": 1080.28,
          "basic": 15000,
          "basic_earned": 576.92,
          "ctc_monthly": 32500,
          "custom_components": [],
          "custom_ded": 0,
          "custom_ded_full": 0,
          "custom_earn": 0,
          "custom_earn_full": 0,
          "custom_employer_full": 0,
          "declared": true,
          "department": "Ops",
          "emp_esic": 4.33,
          "emp_pf": 69.23,
          "employee_id": "E101",
          "esic_no": "",
          "gross_wages": 1153.84,
          "hra": 230.77,
          "loan": 0,
          "net_salary": 1080.28,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "pf_earned_basic": 576.92,
          "present_days": 1,
          "processed_at": "2026-09-01T06:30:00.000Z",
          "processed_on": "2026-09-01",
          "pt": 0,
          "sal_adv": 0,
          "salary_rate": 30000,
          "special_allowance": 346.15,
          "tds": 0,
          "total_days": 26,
          "total_ded": 73.56,
          "uan_no": "",
          "unpaid_paid": 0,
        },
        "confirmation_date": null,
        "created_at": "2026-10-06T00:00:00.000Z",
        "date_of_joining": "2025-01-10",
        "declared": true,
        "designation": "Operator",
        "emp_esic": 0,
        "emp_pf": 69,
        "employee_code": "E101",
        "employee_master_id": 101,
        "employee_name": "Asha Rao",
        "gross_wages": 1154,
        "has_master_variance": false,
        "hra_earned": 231,
        "hra_full": 6000,
        "id": "month_lines-0002",
        "ifsc": "IFSC0001",
        "line_revision_no": 1,
        "loan": 0,
        "net_salary": 1085,
        "overrides_json": {},
        "pf_basic": 15000,
        "pf_earned_basic": 577,
        "present_days": 1,
        "pt_amount": 0,
        "run_id": "month_runs-0001",
        "sal_adv": 0,
        "salary_rate": 30000,
        "source_snapshot_json": {
          "account_no": "111",
          "basic_full": 15000,
          "confirmation_date": null,
          "ctc_monthly": 32500,
          "custom_components": [],
          "custom_ded_full": 0,
          "custom_earn_full": 0,
          "date_of_joining": "2025-01-10",
          "department": "Ops",
          "designation": "Operator",
          "employee_code": "E101",
          "employee_id": "E101",
          "employee_name": "Asha Rao",
          "esic_no": "",
          "hra_full": 6000,
          "ifsc": "IFSC0001",
          "loan": 0,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "present_days": 1,
          "processed_on": "2026-09-01",
          "pt_amount": 0,
          "sal_adv": 0,
          "salary_rate": 30000,
          "special_full": 9000,
          "tds": 0,
          "uan_no": "",
          "unpaid_paid": 0,
          "wef_date": "2026-04-01",
        },
        "special_allowance": 346,
        "special_full": 9000,
        "tds": 0,
        "total_days": 26,
        "total_ded": 69,
        "unpaid_paid": 0,
      },
      {
        "account_no": "222",
        "bank_amount": 1662,
        "basic_earned": 865,
        "basic_full": 22500,
        "computed_json": {
          "bank": 1661.53,
          "basic": 22500,
          "basic_earned": 865.38,
          "ctc_monthly": 47500,
          "custom_components": [],
          "custom_ded": 0,
          "custom_ded_full": 0,
          "custom_earn": 0,
          "custom_earn_full": 0,
          "custom_employer_full": 0,
          "declared": true,
          "department": "Ops",
          "emp_esic": 0,
          "emp_pf": 69.23,
          "employee_id": "E102",
          "esic_no": "",
          "gross_wages": 1730.76,
          "hra": 346.15,
          "loan": 0,
          "net_salary": 1661.53,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "pf_earned_basic": 576.92,
          "present_days": 1,
          "processed_at": "2026-09-01T06:30:00.000Z",
          "processed_on": "2026-09-01",
          "pt": 0,
          "sal_adv": 0,
          "salary_rate": 45000,
          "special_allowance": 519.23,
          "tds": 0,
          "total_days": 26,
          "total_ded": 69.23,
          "uan_no": "",
          "unpaid_paid": 0,
        },
        "confirmation_date": null,
        "created_at": "2026-10-06T00:00:00.000Z",
        "date_of_joining": "2024-06-01",
        "declared": true,
        "designation": "Supervisor",
        "emp_esic": 0,
        "emp_pf": 69,
        "employee_code": "E102",
        "employee_master_id": 102,
        "employee_name": "Ravi Kumar",
        "gross_wages": 1731,
        "has_master_variance": false,
        "hra_earned": 346,
        "hra_full": 9000,
        "id": "month_lines-0003",
        "ifsc": "IFSC0002",
        "line_revision_no": 1,
        "loan": 0,
        "net_salary": 1662,
        "overrides_json": {},
        "pf_basic": 15000,
        "pf_earned_basic": 577,
        "present_days": 1,
        "pt_amount": 0,
        "run_id": "month_runs-0001",
        "sal_adv": 0,
        "salary_rate": 45000,
        "source_snapshot_json": {
          "account_no": "222",
          "basic_full": 22500,
          "confirmation_date": null,
          "ctc_monthly": 47500,
          "custom_components": [],
          "custom_ded_full": 0,
          "custom_earn_full": 0,
          "date_of_joining": "2024-06-01",
          "department": "Ops",
          "designation": "Supervisor",
          "employee_code": "E102",
          "employee_id": "E102",
          "employee_name": "Ravi Kumar",
          "esic_no": "",
          "hra_full": 9000,
          "ifsc": "IFSC0002",
          "loan": 0,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "present_days": 1,
          "processed_on": "2026-09-01",
          "pt_amount": 0,
          "sal_adv": 0,
          "salary_rate": 45000,
          "special_full": 13500,
          "tds": 0,
          "uan_no": "",
          "unpaid_paid": 0,
          "wef_date": "2026-04-01",
        },
        "special_allowance": 520,
        "special_full": 13500,
        "tds": 0,
        "total_days": 26,
        "total_ded": 69,
        "unpaid_paid": 0,
      },
      {
        "account_no": "333",
        "bank_amount": 777,
        "basic_earned": 577,
        "basic_full": 15000,
        "computed_json": {
          "bank": 772.59,
          "basic": 15000,
          "basic_earned": 576.92,
          "ctc_monthly": 24500,
          "custom_components": [],
          "custom_ded": 0,
          "custom_ded_full": 0,
          "custom_earn": 0,
          "custom_earn_full": 0,
          "custom_employer_full": 0,
          "declared": true,
          "department": "Administration",
          "emp_esic": 4.33,
          "emp_pf": 69.23,
          "employee_id": "E103",
          "esic_no": "",
          "gross_wages": 846.15,
          "hra": 230.77,
          "loan": 0,
          "net_salary": 772.5899999999999,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "pf_earned_basic": 576.92,
          "present_days": 1,
          "processed_at": "2026-09-01T06:30:00.000Z",
          "processed_on": "2026-09-01",
          "pt": 0,
          "sal_adv": 0,
          "salary_rate": 22000,
          "special_allowance": 38.46,
          "tds": 0,
          "total_days": 26,
          "total_ded": 73.56,
          "uan_no": "",
          "unpaid_paid": 0,
        },
        "confirmation_date": null,
        "created_at": "2026-10-06T00:00:00.000Z",
        "date_of_joining": "2023-03-15",
        "declared": true,
        "designation": "Clerk",
        "emp_esic": 0,
        "emp_pf": 69,
        "employee_code": "E103",
        "employee_master_id": 103,
        "employee_name": "Meena Das",
        "gross_wages": 846,
        "has_master_variance": false,
        "hra_earned": 231,
        "hra_full": 6000,
        "id": "month_lines-0004",
        "ifsc": "IFSC0003",
        "line_revision_no": 1,
        "loan": 0,
        "net_salary": 777,
        "overrides_json": {},
        "pf_basic": 15000,
        "pf_earned_basic": 577,
        "present_days": 1,
        "pt_amount": 0,
        "run_id": "month_runs-0001",
        "sal_adv": 0,
        "salary_rate": 22000,
        "source_snapshot_json": {
          "account_no": "333",
          "basic_full": 15000,
          "confirmation_date": null,
          "ctc_monthly": 24500,
          "custom_components": [],
          "custom_ded_full": 0,
          "custom_earn_full": 0,
          "date_of_joining": "2023-03-15",
          "department": "Administration",
          "designation": "Clerk",
          "employee_code": "E103",
          "employee_id": "E103",
          "employee_name": "Meena Das",
          "esic_no": "",
          "hra_full": 6000,
          "ifsc": "IFSC0003",
          "loan": 0,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "present_days": 1,
          "processed_on": "2026-09-01",
          "pt_amount": 0,
          "sal_adv": 0,
          "salary_rate": 22000,
          "special_full": 1000,
          "tds": 0,
          "uan_no": "",
          "unpaid_paid": 0,
          "wef_date": "2026-04-01",
        },
        "special_allowance": 38,
        "special_full": 1000,
        "tds": 0,
        "total_days": 26,
        "total_ded": 69,
        "unpaid_paid": 0,
      },
    ],
    "revisions": [
      {
        "change_summary_json": {
          "action": "process_from_master",
          "employee_count": 3,
          "process_mode": "bulk",
          "processed_at": "2026-09-01T06:30:00.000Z",
          "processed_on": "2026-09-01",
          "skipped_duplicate_count": 0,
          "skipped_duplicate_ids": [],
        },
        "changed_by": "user-1",
        "created_at": "2026-10-06T00:00:00.000Z",
        "id": "run_revisions-0005",
        "revision_no": 1,
        "run_id": "month_runs-0001",
      },
    ],
    "runs": [
      {
        "created_at": "2026-10-06T00:00:00.000Z",
        "created_by": "user-1",
        "employee_count": 3,
        "id": "month_runs-0001",
        "include_without_ctc": false,
        "month_days": 26,
        "month_key": "2026-08",
        "pay_month": 8,
        "pay_year": 2026,
        "revision_no": 1,
        "status": "processed",
        "summary_json": {
          "added_count": 3,
          "batches": [
            {
              "employee_count": 3,
              "employee_ids": [
                "101",
                "102",
                "103",
              ],
              "process_mode": "bulk",
              "processed_at": "2026-09-01T06:30:00.000Z",
              "processed_on": "2026-09-01",
              "revision_no": 1,
              "sequence": 1,
              "sheet_no": "IFSPL/SAL/ADM/2026/08/001",
            },
          ],
          "process_mode": "bulk",
          "processed_at": "2026-09-01T06:30:00.000Z",
          "processed_on": "2026-09-01",
          "salary_sheet_no": "IFSPL/SAL/ADM/2026/08/001",
          "sheet_sequence": 1,
        },
        "total_deductions": 207,
        "total_gross": 3731,
        "total_net": 3524,
        "updated_by": "user-1",
      },
    ],
  },
  "meta": {
    "fullReprocess": false,
    "payslipCount": 0,
    "processMode": "bulk",
    "processedAt": "2026-09-01T06:30:00.000Z",
    "processedCount": 3,
    "processedOn": "2026-09-01",
    "skippedDuplicateCount": 0,
    "skippedDuplicates": [],
  },
  "run": {
    "created_at": "2026-10-06T00:00:00.000Z",
    "created_by": "user-1",
    "employee_count": 3,
    "id": "month_runs-0001",
    "include_without_ctc": false,
    "month_days": 26,
    "month_key": "2026-08",
    "pay_month": 8,
    "pay_year": 2026,
    "revision_no": 1,
    "status": "processed",
    "summary_json": {
      "added_count": 3,
      "batches": [
        {
          "employee_count": 3,
          "employee_ids": [
            "101",
            "102",
            "103",
          ],
          "process_mode": "bulk",
          "processed_at": "2026-09-01T06:30:00.000Z",
          "processed_on": "2026-09-01",
          "revision_no": 1,
          "sequence": 1,
          "sheet_no": "IFSPL/SAL/ADM/2026/08/001",
        },
      ],
      "process_mode": "bulk",
      "processed_at": "2026-09-01T06:30:00.000Z",
      "processed_on": "2026-09-01",
      "salary_sheet_no": "IFSPL/SAL/ADM/2026/08/001",
      "sheet_sequence": 1,
    },
    "total_deductions": 207,
    "total_gross": 3731,
    "total_net": 3524,
    "updated_by": "user-1",
  },
}
`;

exports[`D-02 success path: same stored data and result as before > full reprocess of an existing month 1`] = `
{
  "db": {
    "lines": [
      {
        "account_no": "111",
        "bank_amount": 1162,
        "basic_earned": 577,
        "basic_full": 15000,
        "computed_json": {
          "bank": 1157.21,
          "basic": 15000,
          "basic_earned": 576.92,
          "ctc_monthly": 32500,
          "custom_components": [],
          "custom_ded": 0,
          "custom_ded_full": 0,
          "custom_earn": 0,
          "custom_earn_full": 0,
          "custom_employer_full": 0,
          "declared": true,
          "department": "Ops",
          "emp_esic": 4.33,
          "emp_pf": 69.23,
          "employee_id": "E101",
          "esic_no": "",
          "gross_wages": 1230.77,
          "hra": 230.77,
          "loan": 0,
          "net_salary": 1157.21,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "pf_earned_basic": 576.92,
          "present_days": 1,
          "processed_at": "2026-09-02T06:30:00.000Z",
          "processed_on": "2026-09-02",
          "pt": 0,
          "sal_adv": 0,
          "salary_rate": 32000,
          "special_allowance": 423.08,
          "tds": 0,
          "total_days": 26,
          "total_ded": 73.56,
          "uan_no": "",
          "unpaid_paid": 0,
        },
        "confirmation_date": null,
        "created_at": "2026-10-06T00:00:00.000Z",
        "date_of_joining": "2025-01-10",
        "declared": true,
        "designation": "Operator",
        "emp_esic": 0,
        "emp_pf": 69,
        "employee_code": "E101",
        "employee_master_id": 101,
        "employee_name": "Asha Rao",
        "gross_wages": 1231,
        "has_master_variance": false,
        "hra_earned": 231,
        "hra_full": 6000,
        "id": "month_lines-0006",
        "ifsc": "IFSC0001",
        "line_revision_no": 2,
        "loan": 0,
        "net_salary": 1162,
        "overrides_json": {},
        "pf_basic": 15000,
        "pf_earned_basic": 577,
        "present_days": 1,
        "pt_amount": 0,
        "run_id": "month_runs-0001",
        "sal_adv": 0,
        "salary_rate": 32000,
        "source_snapshot_json": {
          "account_no": "111",
          "basic_full": 15000,
          "confirmation_date": null,
          "ctc_monthly": 32500,
          "custom_components": [],
          "custom_ded_full": 0,
          "custom_earn_full": 0,
          "date_of_joining": "2025-01-10",
          "department": "Ops",
          "designation": "Operator",
          "employee_code": "E101",
          "employee_id": "E101",
          "employee_name": "Asha Rao",
          "esic_no": "",
          "hra_full": 6000,
          "ifsc": "IFSC0001",
          "loan": 0,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "present_days": 1,
          "processed_on": "2026-09-02",
          "pt_amount": 0,
          "sal_adv": 0,
          "salary_rate": 32000,
          "special_full": 11000,
          "tds": 0,
          "uan_no": "",
          "unpaid_paid": 0,
          "wef_date": "2026-04-01",
        },
        "special_allowance": 423,
        "special_full": 11000,
        "tds": 0,
        "total_days": 26,
        "total_ded": 69,
        "unpaid_paid": 0,
      },
      {
        "account_no": "222",
        "bank_amount": 1662,
        "basic_earned": 865,
        "basic_full": 22500,
        "computed_json": {
          "bank": 1661.53,
          "basic": 22500,
          "basic_earned": 865.38,
          "ctc_monthly": 47500,
          "custom_components": [],
          "custom_ded": 0,
          "custom_ded_full": 0,
          "custom_earn": 0,
          "custom_earn_full": 0,
          "custom_employer_full": 0,
          "declared": true,
          "department": "Ops",
          "emp_esic": 0,
          "emp_pf": 69.23,
          "employee_id": "E102",
          "esic_no": "",
          "gross_wages": 1730.76,
          "hra": 346.15,
          "loan": 0,
          "net_salary": 1661.53,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "pf_earned_basic": 576.92,
          "present_days": 1,
          "processed_at": "2026-09-02T06:30:00.000Z",
          "processed_on": "2026-09-02",
          "pt": 0,
          "sal_adv": 0,
          "salary_rate": 45000,
          "special_allowance": 519.23,
          "tds": 0,
          "total_days": 26,
          "total_ded": 69.23,
          "uan_no": "",
          "unpaid_paid": 0,
        },
        "confirmation_date": null,
        "created_at": "2026-10-06T00:00:00.000Z",
        "date_of_joining": "2024-06-01",
        "declared": true,
        "designation": "Supervisor",
        "emp_esic": 0,
        "emp_pf": 69,
        "employee_code": "E102",
        "employee_master_id": 102,
        "employee_name": "Ravi Kumar",
        "gross_wages": 1731,
        "has_master_variance": false,
        "hra_earned": 346,
        "hra_full": 9000,
        "id": "month_lines-0007",
        "ifsc": "IFSC0002",
        "line_revision_no": 2,
        "loan": 0,
        "net_salary": 1662,
        "overrides_json": {},
        "pf_basic": 15000,
        "pf_earned_basic": 577,
        "present_days": 1,
        "pt_amount": 0,
        "run_id": "month_runs-0001",
        "sal_adv": 0,
        "salary_rate": 45000,
        "source_snapshot_json": {
          "account_no": "222",
          "basic_full": 22500,
          "confirmation_date": null,
          "ctc_monthly": 47500,
          "custom_components": [],
          "custom_ded_full": 0,
          "custom_earn_full": 0,
          "date_of_joining": "2024-06-01",
          "department": "Ops",
          "designation": "Supervisor",
          "employee_code": "E102",
          "employee_id": "E102",
          "employee_name": "Ravi Kumar",
          "esic_no": "",
          "hra_full": 9000,
          "ifsc": "IFSC0002",
          "loan": 0,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "present_days": 1,
          "processed_on": "2026-09-02",
          "pt_amount": 0,
          "sal_adv": 0,
          "salary_rate": 45000,
          "special_full": 13500,
          "tds": 0,
          "uan_no": "",
          "unpaid_paid": 0,
          "wef_date": "2026-04-01",
        },
        "special_allowance": 520,
        "special_full": 13500,
        "tds": 0,
        "total_days": 26,
        "total_ded": 69,
        "unpaid_paid": 0,
      },
      {
        "account_no": "333",
        "bank_amount": 777,
        "basic_earned": 577,
        "basic_full": 15000,
        "computed_json": {
          "bank": 772.59,
          "basic": 15000,
          "basic_earned": 576.92,
          "ctc_monthly": 24500,
          "custom_components": [],
          "custom_ded": 0,
          "custom_ded_full": 0,
          "custom_earn": 0,
          "custom_earn_full": 0,
          "custom_employer_full": 0,
          "declared": true,
          "department": "Administration",
          "emp_esic": 4.33,
          "emp_pf": 69.23,
          "employee_id": "E103",
          "esic_no": "",
          "gross_wages": 846.15,
          "hra": 230.77,
          "loan": 0,
          "net_salary": 772.5899999999999,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "pf_earned_basic": 576.92,
          "present_days": 1,
          "processed_at": "2026-09-02T06:30:00.000Z",
          "processed_on": "2026-09-02",
          "pt": 0,
          "sal_adv": 0,
          "salary_rate": 22000,
          "special_allowance": 38.46,
          "tds": 0,
          "total_days": 26,
          "total_ded": 73.56,
          "uan_no": "",
          "unpaid_paid": 0,
        },
        "confirmation_date": null,
        "created_at": "2026-10-06T00:00:00.000Z",
        "date_of_joining": "2023-03-15",
        "declared": true,
        "designation": "Clerk",
        "emp_esic": 0,
        "emp_pf": 69,
        "employee_code": "E103",
        "employee_master_id": 103,
        "employee_name": "Meena Das",
        "gross_wages": 846,
        "has_master_variance": false,
        "hra_earned": 231,
        "hra_full": 6000,
        "id": "month_lines-0008",
        "ifsc": "IFSC0003",
        "line_revision_no": 2,
        "loan": 0,
        "net_salary": 777,
        "overrides_json": {},
        "pf_basic": 15000,
        "pf_earned_basic": 577,
        "present_days": 1,
        "pt_amount": 0,
        "run_id": "month_runs-0001",
        "sal_adv": 0,
        "salary_rate": 22000,
        "source_snapshot_json": {
          "account_no": "333",
          "basic_full": 15000,
          "confirmation_date": null,
          "ctc_monthly": 24500,
          "custom_components": [],
          "custom_ded_full": 0,
          "custom_earn_full": 0,
          "date_of_joining": "2023-03-15",
          "department": "Administration",
          "designation": "Clerk",
          "employee_code": "E103",
          "employee_id": "E103",
          "employee_name": "Meena Das",
          "esic_no": "",
          "hra_full": 6000,
          "ifsc": "IFSC0003",
          "loan": 0,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "present_days": 1,
          "processed_on": "2026-09-02",
          "pt_amount": 0,
          "sal_adv": 0,
          "salary_rate": 22000,
          "special_full": 1000,
          "tds": 0,
          "uan_no": "",
          "unpaid_paid": 0,
          "wef_date": "2026-04-01",
        },
        "special_allowance": 38,
        "special_full": 1000,
        "tds": 0,
        "total_days": 26,
        "total_ded": 69,
        "unpaid_paid": 0,
      },
    ],
    "revisions": [
      {
        "change_summary_json": {
          "action": "process_from_master",
          "employee_count": 3,
          "process_mode": "bulk",
          "processed_at": "2026-09-01T06:30:00.000Z",
          "processed_on": "2026-09-01",
          "skipped_duplicate_count": 0,
          "skipped_duplicate_ids": [],
        },
        "changed_by": "user-1",
        "created_at": "2026-10-06T00:00:00.000Z",
        "id": "run_revisions-0005",
        "revision_no": 1,
        "run_id": "month_runs-0001",
      },
      {
        "change_summary_json": {
          "action": "reprocess_from_master",
          "employee_count": 3,
          "process_mode": "bulk",
          "processed_at": "2026-09-02T06:30:00.000Z",
          "processed_on": "2026-09-02",
          "skipped_duplicate_count": 0,
          "skipped_duplicate_ids": [],
        },
        "changed_by": "user-1",
        "created_at": "2026-10-06T00:00:00.000Z",
        "id": "run_revisions-0009",
        "revision_no": 2,
        "run_id": "month_runs-0001",
      },
    ],
    "runs": [
      {
        "created_at": "2026-10-06T00:00:00.000Z",
        "created_by": "user-1",
        "employee_count": 3,
        "id": "month_runs-0001",
        "include_without_ctc": false,
        "month_days": 26,
        "month_key": "2026-08",
        "pay_month": 8,
        "pay_year": 2026,
        "revision_no": 2,
        "status": "processed",
        "summary_json": {
          "batches": [
            {
              "employee_count": 3,
              "employee_ids": [
                "101",
                "102",
                "103",
              ],
              "process_mode": "bulk",
              "processed_at": "2026-09-02T06:30:00.000Z",
              "processed_on": "2026-09-02",
              "revision_no": 2,
              "sequence": 1,
              "sheet_no": "IFSPL/SAL/ADM/2026/08/001-R2",
            },
          ],
          "process_mode": "bulk",
          "processed_at": "2026-09-02T06:30:00.000Z",
          "processed_on": "2026-09-02",
          "reprocessed_at": "2026-09-02T06:30:00.000Z",
          "salary_sheet_no": "IFSPL/SAL/ADM/2026/08/001-R2",
          "sheet_sequence": 1,
        },
        "total_deductions": 207,
        "total_gross": 3808,
        "total_net": 3601,
        "updated_by": "user-1",
      },
    ],
  },
  "lineCount": 3,
  "meta": {
    "fullReprocess": true,
    "payslipCount": 0,
    "processMode": "bulk",
    "processedAt": "2026-09-02T06:30:00.000Z",
    "processedCount": 3,
    "processedOn": "2026-09-02",
    "skippedDuplicateCount": 0,
    "skippedDuplicates": [],
  },
  "run": {
    "created_at": "2026-10-06T00:00:00.000Z",
    "created_by": "user-1",
    "employee_count": 3,
    "id": "month_runs-0001",
    "include_without_ctc": false,
    "month_days": 26,
    "month_key": "2026-08",
    "pay_month": 8,
    "pay_year": 2026,
    "revision_no": 2,
    "status": "processed",
    "summary_json": {
      "batches": [
        {
          "employee_count": 3,
          "employee_ids": [
            "101",
            "102",
            "103",
          ],
          "process_mode": "bulk",
          "processed_at": "2026-09-02T06:30:00.000Z",
          "processed_on": "2026-09-02",
          "revision_no": 2,
          "sequence": 1,
          "sheet_no": "IFSPL/SAL/ADM/2026/08/001-R2",
        },
      ],
      "process_mode": "bulk",
      "processed_at": "2026-09-02T06:30:00.000Z",
      "processed_on": "2026-09-02",
      "reprocessed_at": "2026-09-02T06:30:00.000Z",
      "salary_sheet_no": "IFSPL/SAL/ADM/2026/08/001-R2",
      "sheet_sequence": 1,
    },
    "total_deductions": 207,
    "total_gross": 3808,
    "total_net": 3601,
    "updated_at": "2026-10-06T00:00:00.000Z",
    "updated_by": "user-1",
  },
}
`;

exports[`D-02 success path: same stored data and result as before > partial process of an existing month 1`] = `
{
  "db": {
    "lines": [
      {
        "account_no": "111",
        "bank_amount": 1085,
        "basic_earned": 577,
        "basic_full": 15000,
        "computed_json": {
          "bank": 1080.28,
          "basic": 15000,
          "basic_earned": 576.92,
          "ctc_monthly": 32500,
          "custom_components": [],
          "custom_ded": 0,
          "custom_ded_full": 0,
          "custom_earn": 0,
          "custom_earn_full": 0,
          "custom_employer_full": 0,
          "declared": true,
          "department": "Ops",
          "emp_esic": 4.33,
          "emp_pf": 69.23,
          "employee_id": "E101",
          "esic_no": "",
          "gross_wages": 1153.84,
          "hra": 230.77,
          "loan": 0,
          "net_salary": 1080.28,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "pf_earned_basic": 576.92,
          "present_days": 1,
          "processed_at": "2026-09-01T06:30:00.000Z",
          "processed_on": "2026-09-01",
          "pt": 0,
          "sal_adv": 0,
          "salary_rate": 30000,
          "special_allowance": 346.15,
          "tds": 0,
          "total_days": 26,
          "total_ded": 73.56,
          "uan_no": "",
          "unpaid_paid": 0,
        },
        "confirmation_date": null,
        "created_at": "2026-10-06T00:00:00.000Z",
        "date_of_joining": "2025-01-10",
        "declared": true,
        "designation": "Operator",
        "emp_esic": 0,
        "emp_pf": 69,
        "employee_code": "E101",
        "employee_master_id": 101,
        "employee_name": "Asha Rao",
        "gross_wages": 1154,
        "has_master_variance": false,
        "hra_earned": 231,
        "hra_full": 6000,
        "id": "month_lines-0002",
        "ifsc": "IFSC0001",
        "line_revision_no": 1,
        "loan": 0,
        "net_salary": 1085,
        "overrides_json": {},
        "pf_basic": 15000,
        "pf_earned_basic": 577,
        "present_days": 1,
        "pt_amount": 0,
        "run_id": "month_runs-0001",
        "sal_adv": 0,
        "salary_rate": 30000,
        "source_snapshot_json": {
          "account_no": "111",
          "basic_full": 15000,
          "confirmation_date": null,
          "ctc_monthly": 32500,
          "custom_components": [],
          "custom_ded_full": 0,
          "custom_earn_full": 0,
          "date_of_joining": "2025-01-10",
          "department": "Ops",
          "designation": "Operator",
          "employee_code": "E101",
          "employee_id": "E101",
          "employee_name": "Asha Rao",
          "esic_no": "",
          "hra_full": 6000,
          "ifsc": "IFSC0001",
          "loan": 0,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "present_days": 1,
          "processed_on": "2026-09-01",
          "pt_amount": 0,
          "sal_adv": 0,
          "salary_rate": 30000,
          "special_full": 9000,
          "tds": 0,
          "uan_no": "",
          "unpaid_paid": 0,
          "wef_date": "2026-04-01",
        },
        "special_allowance": 346,
        "special_full": 9000,
        "tds": 0,
        "total_days": 26,
        "total_ded": 69,
        "unpaid_paid": 0,
      },
      {
        "account_no": "222",
        "bank_amount": 1662,
        "basic_earned": 865,
        "basic_full": 22500,
        "computed_json": {
          "bank": 1661.53,
          "basic": 22500,
          "basic_earned": 865.38,
          "ctc_monthly": 47500,
          "custom_components": [],
          "custom_ded": 0,
          "custom_ded_full": 0,
          "custom_earn": 0,
          "custom_earn_full": 0,
          "custom_employer_full": 0,
          "declared": true,
          "department": "Ops",
          "emp_esic": 0,
          "emp_pf": 69.23,
          "employee_id": "E102",
          "esic_no": "",
          "gross_wages": 1730.76,
          "hra": 346.15,
          "loan": 0,
          "net_salary": 1661.53,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "pf_earned_basic": 576.92,
          "present_days": 1,
          "processed_at": "2026-09-01T06:30:00.000Z",
          "processed_on": "2026-09-01",
          "pt": 0,
          "sal_adv": 0,
          "salary_rate": 45000,
          "special_allowance": 519.23,
          "tds": 0,
          "total_days": 26,
          "total_ded": 69.23,
          "uan_no": "",
          "unpaid_paid": 0,
        },
        "confirmation_date": null,
        "created_at": "2026-10-06T00:00:00.000Z",
        "date_of_joining": "2024-06-01",
        "declared": true,
        "designation": "Supervisor",
        "emp_esic": 0,
        "emp_pf": 69,
        "employee_code": "E102",
        "employee_master_id": 102,
        "employee_name": "Ravi Kumar",
        "gross_wages": 1731,
        "has_master_variance": false,
        "hra_earned": 346,
        "hra_full": 9000,
        "id": "month_lines-0003",
        "ifsc": "IFSC0002",
        "line_revision_no": 1,
        "loan": 0,
        "net_salary": 1662,
        "overrides_json": {},
        "pf_basic": 15000,
        "pf_earned_basic": 577,
        "present_days": 1,
        "pt_amount": 0,
        "run_id": "month_runs-0001",
        "sal_adv": 0,
        "salary_rate": 45000,
        "source_snapshot_json": {
          "account_no": "222",
          "basic_full": 22500,
          "confirmation_date": null,
          "ctc_monthly": 47500,
          "custom_components": [],
          "custom_ded_full": 0,
          "custom_earn_full": 0,
          "date_of_joining": "2024-06-01",
          "department": "Ops",
          "designation": "Supervisor",
          "employee_code": "E102",
          "employee_id": "E102",
          "employee_name": "Ravi Kumar",
          "esic_no": "",
          "hra_full": 9000,
          "ifsc": "IFSC0002",
          "loan": 0,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "present_days": 1,
          "processed_on": "2026-09-01",
          "pt_amount": 0,
          "sal_adv": 0,
          "salary_rate": 45000,
          "special_full": 13500,
          "tds": 0,
          "uan_no": "",
          "unpaid_paid": 0,
          "wef_date": "2026-04-01",
        },
        "special_allowance": 520,
        "special_full": 13500,
        "tds": 0,
        "total_days": 26,
        "total_ded": 69,
        "unpaid_paid": 0,
      },
      {
        "account_no": "333",
        "bank_amount": 777,
        "basic_earned": 577,
        "basic_full": 15000,
        "computed_json": {
          "bank": 772.59,
          "basic": 15000,
          "basic_earned": 576.92,
          "ctc_monthly": 24500,
          "custom_components": [],
          "custom_ded": 0,
          "custom_ded_full": 0,
          "custom_earn": 0,
          "custom_earn_full": 0,
          "custom_employer_full": 0,
          "declared": true,
          "department": "Administration",
          "emp_esic": 4.33,
          "emp_pf": 69.23,
          "employee_id": "E103",
          "esic_no": "",
          "gross_wages": 846.15,
          "hra": 230.77,
          "loan": 0,
          "net_salary": 772.5899999999999,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "pf_earned_basic": 576.92,
          "present_days": 1,
          "processed_at": "2026-09-01T06:30:00.000Z",
          "processed_on": "2026-09-01",
          "pt": 0,
          "sal_adv": 0,
          "salary_rate": 22000,
          "special_allowance": 38.46,
          "tds": 0,
          "total_days": 26,
          "total_ded": 73.56,
          "uan_no": "",
          "unpaid_paid": 0,
        },
        "confirmation_date": null,
        "created_at": "2026-10-06T00:00:00.000Z",
        "date_of_joining": "2023-03-15",
        "declared": true,
        "designation": "Clerk",
        "emp_esic": 0,
        "emp_pf": 69,
        "employee_code": "E103",
        "employee_master_id": 103,
        "employee_name": "Meena Das",
        "gross_wages": 846,
        "has_master_variance": false,
        "hra_earned": 231,
        "hra_full": 6000,
        "id": "month_lines-0005",
        "ifsc": "IFSC0003",
        "line_revision_no": 1,
        "loan": 0,
        "net_salary": 777,
        "overrides_json": {},
        "pf_basic": 15000,
        "pf_earned_basic": 577,
        "present_days": 1,
        "pt_amount": 0,
        "run_id": "month_runs-0001",
        "sal_adv": 0,
        "salary_rate": 22000,
        "source_snapshot_json": {
          "account_no": "333",
          "basic_full": 15000,
          "confirmation_date": null,
          "ctc_monthly": 24500,
          "custom_components": [],
          "custom_ded_full": 0,
          "custom_earn_full": 0,
          "date_of_joining": "2023-03-15",
          "department": "Administration",
          "designation": "Clerk",
          "employee_code": "E103",
          "employee_id": "E103",
          "employee_name": "Meena Das",
          "esic_no": "",
          "hra_full": 6000,
          "ifsc": "IFSC0003",
          "loan": 0,
          "pay_month_key": "2026-08",
          "pf_basic": 15000,
          "present_days": 1,
          "processed_on": "2026-09-01",
          "pt_amount": 0,
          "sal_adv": 0,
          "salary_rate": 22000,
          "special_full": 1000,
          "tds": 0,
          "uan_no": "",
          "unpaid_paid": 0,
          "wef_date": "2026-04-01",
        },
        "special_allowance": 38,
        "special_full": 1000,
        "tds": 0,
        "total_days": 26,
        "total_ded": 69,
        "unpaid_paid": 0,
      },
    ],
    "revisions": [
      {
        "change_summary_json": {
          "action": "process_from_master",
          "departments": [
            "Ops",
          ],
          "employee_count": 2,
          "process_mode": "dept",
          "processed_at": "2026-09-01T06:30:00.000Z",
          "processed_on": "2026-09-01",
          "skipped_duplicate_count": 0,
          "skipped_duplicate_ids": [],
        },
        "changed_by": "user-1",
        "created_at": "2026-10-06T00:00:00.000Z",
        "id": "run_revisions-0004",
        "revision_no": 1,
        "run_id": "month_runs-0001",
      },
    ],
    "runs": [
      {
        "created_at": "2026-10-06T00:00:00.000Z",
        "created_by": "user-1",
        "employee_count": 3,
        "id": "month_runs-0001",
        "include_without_ctc": false,
        "month_days": 26,
        "month_key": "2026-08",
        "pay_month": 8,
        "pay_year": 2026,
        "revision_no": 1,
        "status": "processed",
        "summary_json": {
          "added_count": 1,
          "batches": [
            {
              "departments": [
                "Ops",
              ],
              "employee_count": 2,
              "employee_ids": [
                "101",
                "102",
              ],
              "process_mode": "dept",
              "processed_at": "2026-09-01T06:30:00.000Z",
              "processed_on": "2026-09-01",
              "revision_no": 1,
              "sequence": 1,
              "sheet_no": "IFSPL/SAL/ADM/2026/08/001",
            },
            {
              "departments": [
                "Admin",
              ],
              "employee_count": 1,
              "employee_ids": [
                "103",
              ],
              "process_mode": "dept",
              "processed_at": "2026-09-01T06:30:00.000Z",
              "processed_on": "2026-09-01",
              "revision_no": 1,
              "sequence": 2,
              "sheet_no": "IFSPL/SAL/ADM/2026/08/002",
            },
          ],
          "departments": [
            "Admin",
          ],
          "last_partial_process_at": "2026-09-01T06:30:00.000Z",
          "process_mode": "dept",
          "processed_at": "2026-09-01T06:30:00.000Z",
          "processed_on": "2026-09-01",
          "salary_sheet_no": "IFSPL/SAL/ADM/2026/08/002",
          "sheet_sequence": 2,
          "skipped_duplicate_count": 0,
        },
        "total_deductions": 207,
        "total_gross": 3731,
        "total_net": 3524,
        "updated_by": "user-1",
      },
    ],
  },
  "meta": {
    "fullReprocess": false,
    "payslipCount": 0,
    "processMode": "dept",
    "processedAt": "2026-09-01T06:30:00.000Z",
    "processedCount": 1,
    "processedOn": "2026-09-01",
    "skippedDuplicateCount": 0,
    "skippedDuplicates": [],
  },
}
`;
